# CppArrows

./: CMakeLists.txt  LICENSE  README.md
examples/: usage_example.cpp
lib/cpp_arrows/: arrow.h  arrow_base.h  make_arrow.h
release/CppArrows/: cpp_arrows.hpp
tests/: arrow_test_helpers.h  tests_main.cpp
tests/arrow/: apply_and_convert_test.cpp  arrow_composition_test.cpp  make_arrow_test.cpp  partial_apply_test.cpp
tests/arrow_base/: compose_test.cpp  make_apply_test.cpp  make_arrow_base.h  partial_application_test.cpp
tests/examples/: basic_usage.cpp  getting_started_example.cpp
tests/lib/: arrow_base_test_helpers.h
